<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Hit Me!!</string>
    <string name="hello">Hello World!</string>
    <string name="second">Second</string>
    <string name="weather_category">Weather Settings</string>
    <string name="weather_notification_checkbox_heading">Weather Notifications</string>
    <string name="weather_notification_checkbox_summary">Weather updates</string>
    <string name="weather_units_heading">Temperature Units</string>
    <string name="weather_location_heading">Location</string>
    <string name="myLocation_gps">mylocation_gps</string>
    <string name="weather_icon_heading">Icon Pack</string>
    <string name="location_dailog_title">Location </string>
    <string name="value_location_metric">Set a Location</string>
    <string name="value_icon_metric">Default pack</string>
    <string name="value_units_metric">Metric</string>
    <string name="value_units_imperial">Imperial</string>
    <string name="icon_pack_heading">Weather icon packs</string>

    <string name="icon_pack_meteoconcs" translatable="false">Meteoconcs Pack</string>
    <string name="icon_pack_default" translatable="false">Default Pack</string>

    <string name="format_temperature"><xliff:g mId="temp">%1.0f</xliff:g></string>
    <string name="forecast_empty">No data , refresh to update latest weather</string>
    <string name="weather_today_art">today_art</string>
    <string name="coverimage">coverImage</string>
    <string name="humidity_title">Humidity</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_title">Wind&#160;&#160;&#160;&#160;</string>
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g>\n High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="temperature_heading">Temperature</string>
    <string name="day_title">Day</string>
    <string name="timeWeatherIcon">timeWeatherConditionIcon</string>
    <string name="other_heading">Other</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">techgravy.sunshine</string>
    <string name="content_authority">techgravy.sunshine</string>
    <string name="crash_toast_text">App crashed</string>
    <string name="random_photo_setting_tag">Change Photo background</string>
    <string name="action_sync">Sync</string>
    <string name="location_updated_message">Location changed</string>
    <string name="location_hint">Enter city</string>

</resources>
